Corrected overflow
top container contained for better view on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,6 +81,9 @@ hr{
         top: 20%;
         right: -15%;
     }
+    .top-container{
+        overflow: hidden;
+    }
 }
 .middle-container{
     width: 50%;
